# svc-pricing

./: .LICENSE  .cspell.config.yaml  .cspell.project-words.txt  .env.base  .env.repo  .gitignore  .terraform_init  .tofu_init  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  log4rs.yaml
.cargo/: config.toml
.github/workflows/: post_release.yml  release.yml
.make/: base.mk
client/: Cargo.toml  README.md
client-grpc/: Cargo.toml  README.md
client-grpc/examples/: client.rs  grpc.rs
client-grpc/src/: client.rs  grpc.rs  lib.rs  prelude.rs  service.rs
client-grpc/tests/: integration_test.rs
client/examples/: client.rs
client/src/: grpc.rs  lib.rs
docs/: conops.md  icd.md  sdd.md
proto/: svc-pricing-grpc.proto
server/: Cargo.toml  README.md  build.rs
server/src/: config.rs  engine.rs  grpc.rs  lib.rs  loggers.rs  main.rs
server/src/grpc/: mod.rs  server.rs
server/tests/: integration_test.rs
src/: main.rs
