[workspace]
members  = ["server", "client-grpc"]
resolver = "2"

[workspace.package]
authors      = ["A.M. Smith <alex@aetheric.nl>"]
edition      = "2021"
homepage     = "https://www.aetheric.nl"
license-file = "LICENSE"
repository   = "https://github.com/aetheric-oss/svc-pricing"

categories = ["aerospace::drones", "aerospace::protocols", "finance"]
