[package]
description = "Arrow Pricing service GRPC client"
edition     = "2021"                              # Allowed values are 2015, 2018, 2021
license     = ""
name        = "svc-pricing-client-grpc"
version     = "0.3.0-develop.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost       = "0.11"
prost-types = "0.11"
tonic       = "0.8"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[lib]
name = "svc_pricing_client"
path = "src/lib.rs"

[[example]]
name = "client"
