[package]
description = "Arrow Pricing service GRPC client"
edition     = "2021"                                                       # Allowed values are 2015, 2018, 2021
homepage    = "https://www.arrowair.com/docs/documentation/services/intro"
keywords    = ["vtol", "client", "pricing"]                                # max 5
license     = "BUSL-1.1"
name        = "svc-pricing-client-grpc"
repository  = "https://github.com/Arrow-air/svc-pricing"
version     = "0.4.1-develop.7"

categories = [
  "aerospace::drones",
  "aerospace::protocols",
] # max 5 -- https://crates.io/category_slugs

[dependencies]
prost       = "0.11"
prost-types = "0.11"
tonic       = "0.8"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[lib]
name = "svc_pricing_client"
path = "src/lib.rs"

[[example]]
name = "client"
