
[package]
edition = "2021"
name    = "svc-pricing-client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost       = "0.11.0"
prost-types = "0.11.1"
tonic       = "0.8.1"

[lib]
name = "cargo_client"
path = "src/lib.rs"
