[package]
name    = "svc-pricing"
version = "0.4.1-develop.1"
edition = "2021"            # Allowed values are 2015, 2018, 2021
# Rust Editions: https://doc.rust-lang.org/edition-guide/index.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendored-openssl = ['openssl/vendored']

[dependencies]
cargo-husky  = "1"
log          = "0.4"
openssl      = "0.10"
prost        = "0.11"
prost-types  = "0.11"
tokio        = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic        = "0.8"
tonic-health = "0.7"

[dev-dependencies.cargo-husky]
default-features = false          # Disable features which are enabled by default
features         = ["user-hooks"]
version          = "1"

[dependencies.log4rs]
features = [
  "background_rotation",
  "rolling_file_appender",
  "json_format",
  "gzip",
]
version = "1.2"

[build-dependencies]
tonic-build = "0.8"
