[package]
description = "Arrow pricing service GRPC server"
edition     = "2021"                                                       # Allowed values are 2015, 2018, 2021
homepage    = "https://www.arrowair.com/docs/documentation/services/intro"
keywords    = ["vtol", "client", "pricing"]                                # max 5
license     = "BUSL-1.1"
name        = "svc-pricing"
repository  = "https://github.com/Arrow-air/svc-pricing"
version     = "0.5.0"

categories = [
  "aerospace::drones",
  "aerospace::protocols",
] # max 5 -- https://crates.io/category_slugs

[features]
vendored-openssl = ['openssl/vendored']

[dependencies]
cargo-husky  = "1"
log          = "0.4"
openssl      = "0.10"
prost        = "0.11"
prost-types  = "0.11"
snafu        = { version = "0.7", default-features = false }                 # no_std
tokio        = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic        = "0.8"
tonic-health = "0.7"

[dev-dependencies.cargo-husky]
default-features = false          # Disable features which are enabled by default
features         = ["user-hooks"]
version          = "1"

[dependencies.log4rs]
features = [
  "background_rotation",
  "rolling_file_appender",
  "json_format",
  "gzip",
]
version = "1.2"

[build-dependencies]
tonic-build = "0.8"
