[package]
description = "Arrow pricing service gRPC server"
keywords    = ["vtol", "server", "grpc", "rest", "pricing"] # max 5
name        = "svc-pricing"
version     = "0.5.1"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[features]
default          = []
dev              = ["mock"]
test_util        = ["mock", "stub_backends"]
vendored-openssl = ["openssl/vendored"]
# Will add a 'mock' module for the enabled resources, providing access to mock data generation functions
mock = []
# Will use a stubbed backend connection, only use for tests!
stub_backends = [
  # FIXME: add mock_clients of actual services you're depending on
]
# Will implement stub functions for the server, only use for tests!
stub_server = ["test_util"]
# Only added to support client-grpc feature when running tests
stub_client = ["stub_backends"]

[dependencies]
anyhow       = "1.0"
cargo-husky  = "1"
config       = "0.13"
dotenv       = "0.15"
log          = "0.4"
openssl      = "0.10"
prost        = "0.12"
prost-types  = "0.12"
serde        = "1.0"
serde_json   = "1.0"
snafu        = { version = "0.7", default-features = false }     # no_std
tokio        = { version = "1.33", features = ["full"] }
tonic        = "0.10"
tonic-health = "0.10"
tower        = { version = "0.4", features = ["limit"] }
tower-http   = { version = "0.4", features = ["cors", "trace"] }

[dependencies.lib-common]
git = "https://github.com/Arrow-air/lib-common.git"
tag = "latest-develop"

[dependencies.log4rs]
features = [
  "background_rotation",
  "rolling_file_appender",
  "json_format",
  "gzip",
]
version = "1.2"

[dependencies.utoipa]
features = ["axum_extras", "chrono"]
version  = "4.0"

[dev-dependencies]
logtest = "2.0"

[dev-dependencies.cargo-husky]
default-features = false          # Disable features which are enabled by default
features         = ["user-hooks"]
version          = "1"

# Make sure we enable the required modules when running tests
[dev-dependencies.svc-pricing]
features = ["dev"]
path     = "."

[build-dependencies]
tonic-build = { version = "0.10", features = ["cleanup-markdown"] }
